app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --input: #f4f4f4;
  --background: #ffffff;
  --foreground: #171717;
}

*,*::after,*::before{
  scroll-behavior: smooth;
}

@media (prefers-color-scheme: dark) {
  :root {
    --input: #171717;
    --background: #212121;
    --foreground: #ededed;
  }
}

body {
  font-family: Arial, Helvetica, sans-serif;
  color: var(--foreground);
  background: var(--background);
}

@layer components {
  .scroll {
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .scroll::-webkit-scrollbar {
    display: none;
  }

  .btn {
    @apply text-green-400 hover:bg-green-50 rounded-md transition-all text-xs p-1
  }

  .pattern {
    background-image: linear-gradient(#292a30 0.1em, transparent 0.1em),
    linear-gradient(90deg, #292a30 0.1em, transparent 0.1em);
    background-size: 2em 2em;
  }

  .message-container {
    @apply flex w-full gap-3 p-2 max-w-4xl mx-auto bg-dark-gray overflow-hidden rounded-2xl items-center;
  }

  .message-input {
    @apply resize-none scroll h-fit max-h-[200px] p-2.5 w-full text-foreground focus:outline-none rounded-lg bg-transparent dark:placeholder-gray-400;
  }

  .message-container .btn {
    @apply w-fit dark:hover:bg-white/50 transition-all p-2 h-fit disabled:bg-white/20 rounded-full self-end flex items-center justify-center bg-white;
  }

  .select-input {
    @apply appearance-none bg-transparent cursor-pointer *:text-black text-sm rounded
    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500;
  }
}

@layer base {
  :root {
    --radius: 0.5rem;
  }
}

